force-app/main/default/objects/GPMS_Variation_History__c/GPMS_Variation_History__c.object-meta.xml
<CustomObject>
    <label>Variation History</label>
    <nameField>
        <displayFormat>VAR-{00000000}</displayFormat>
        <label>Variation History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Variation History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>