force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Approved_Variation_Date__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Approved_Variation_Date__c</fullName>
    <label>Approved Variation Date</label>
    <type>Date</type>
</CustomField>