force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Date_Decision_Required_By__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_Decision_Required_By__c</fullName>
    <label>Date Decision Required By</label>
    <type>Date</type>
</CustomField>