force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Date_of_Notification_by_Provider__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_of_Notification_by_Provider__c</fullName>
    <label>Date of Notification by Provider</label>
    <type>Date</type>
</CustomField>