force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Date_of_Receipt_Further_Information__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_of_Receipt_Further_Information__c</fullName>
    <label>Date of Receipt of Further Information</label>
    <type>Date</type>
</CustomField>