force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Date_of_Request__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_of_Request__c</fullName>
    <label>Date of Request</label>
    <type>Date</type>
</CustomField>