force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Date_Required__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Date_Required__c</fullName>
    <label>Date Required</label>
    <type>Date</type>
</CustomField>