force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Decision__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Approved</fullName>
            </value>
            <value>
                <fullName>Not Approved</fullName>
            </value>
            <value>
                <fullName>Withdrawn</fullName>
            </value>
            <value>
                <fullName>Decision by Provider not to Activate</fullName>
            </value>
            <value>
                <fullName>Uphold Decision</fullName>
            </value>
            <value>
                <fullName>Set Aside Decision and Substitute New Decision</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>