force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Event__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Event__c</fullName>
    <description>Master-Detail field to Event object</description>
    <label>Event</label>
    <referenceTo>Event__c</referenceTo>
    <relationshipLabel>Variation History</relationshipLabel>
    <relationshipName>Variation_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>