force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Link_to_Documents__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Link_to_Documents__c</fullName>
    <label>Link to Documents</label>
    <type>TextArea</type>
</CustomField>