force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Summary_of_Request__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Summary_of_Request__c</fullName>
    <label>Summary of Request</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>