force-app/main/default/objects/GPMS_Variation_History__c/fields/GPMS_Variation_Date_Being_Approved__c.field-meta.xml
<CustomField>
    <fullName>GPMS_Variation_Date_Being_Approved__c</fullName>
    <label>Proposed Variation Day</label>
    <type>Date</type>
</CustomField>