force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Cancel_Variation.recordType-meta.xml
<RecordType>
    <fullName>Cancel_Variation</fullName>
    <active>true</active>
    <label>Cancel</label>
</RecordType>