force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Change_Variation_Day_Var.recordType-meta.xml
<RecordType>
    <fullName>Change_Variation_Day_Var</fullName>
    <active>true</active>
    <label>Change Variation Day</label>
</RecordType>