force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Correct.recordType-meta.xml
<RecordType>
    <fullName>Correct</fullName>
    <active>true</active>
    <label>Correct</label>
</RecordType>