force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Record_AAT_Decision.recordType-meta.xml
<RecordType>
    <fullName>Record_AAT_Decision</fullName>
    <active>true</active>
    <label>Record AAT Decision</label>
</RecordType>