force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Record_Decision.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision</fullName>
    <active>true</active>
    <label>Record Decision</label>
</RecordType>