force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Record_Decision_byProvider_not_to_Activate.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision_byProvider_not_to_Activate</fullName>
    <active>true</active>
    <label>Record Decision by Provider not to Activate</label>
</RecordType>