force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Record_Decision_on_Request_For_Reconsideration.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision_on_Request_For_Reconsideration</fullName>
    <active>true</active>
    <label>Record Decision On Request For Reconsideration</label>
</RecordType>