force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Record_Decision_To_Activate.recordType-meta.xml
<RecordType>
    <fullName>Record_Decision_To_Activate</fullName>
    <active>true</active>
    <label>Record Decision To Activate</label>
</RecordType>