force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Record_Receipt_on_Request_for_Further_Information.recordType-meta.xml
<RecordType>
    <fullName>Record_Receipt_on_Request_for_Further_Information</fullName>
    <active>true</active>
    <label>Record Receipt on Request for Further Information</label>
</RecordType>