force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Record_Request_For_Further_Information.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_For_Further_Information</fullName>
    <active>true</active>
    <label>Record Request for Further Information</label>
</RecordType>