force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Record_Request_For_Reconsideration_by_AAT.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_For_Reconsideration_by_AAT</fullName>
    <active>true</active>
    <label>Record Request for Reconsideration by AAT</label>
</RecordType>