force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Record_Request_for_Reconsideration_Variation.recordType-meta.xml
<RecordType>
    <fullName>Record_Request_for_Reconsideration_Variation</fullName>
    <active>true</active>
    <label>Record Request for Reconsideration</label>
</RecordType>