force-app/main/default/objects/GPMS_Variation_History__c/recordTypes/Withdraw.recordType-meta.xml
<RecordType>
    <fullName>Withdraw</fullName>
    <active>true</active>
    <label>Withdraw</label>
</RecordType>