force-app/main/default/objects/GPMS_Variation_History__c/validationRules/Perm_V_STO_Access.validationRule-meta.xml
<ValidationRule>
    <fullName>Perm_V_STO_Access</fullName>
    <active>true</active>
    <description>STO record access</description>
    <errorConditionFormula>AND(
NOT(ISNEW()),
AND(
OR(
ISCHANGED(GPMS_Decision__c),
ISCHANGED(GPMS_Event__c)),
$Permission.GPMS_STO
))</errorConditionFormula>
    <errorMessage>You do not have access to edit Decision and Event. Please exit from editing mode.</errorMessage>
</ValidationRule>